--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -6,7 +6,7 @@ add_newline = true
 success_symbol = '[➜](bold green)'
 
 [git_commit]
-commit_hash_length = 6
+commit_hash_length = 7
 tag_disabled = false
 
 [c]
@@ -15,3 +15,17 @@ format = 'via [$name $version]($style)'
 [directory]
 truncation_length = 8
 truncation_symbol = '…/'
+
+[git_branch]
+truncation_length = 20
+
+[memory_usage]
+format = "using [$ram_pct RAM]($style) "
+disabled = false
+
+[package]
+disabled = true
+
+[status]
+format = "[$common_meaning $status]($style) "
+disabled = false
