--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -1,6 +1,7 @@
 "$schema" = 'https://starship.rs/config-schema.json'
 
 add_newline = true
+command_timeout = 3000
 
 [character]
 success_symbol = '[➜](bold green)'
@@ -10,7 +11,7 @@ commit_hash_length = 7
 tag_disabled = false
 
 [c]
-format = 'via [$name $version]($style)'
+format = "via [$name $version]($style) "
 
 [directory]
 truncation_length = 8
